--- a/resource/log4j.properties
+++ b/resource/log4j.properties
@@ -1,5 +1,5 @@
 # This is the configuring for logging displayed in the Application Server
-log4j.rootCategory=DEBUG, R, stdout
+log4j.rootCategory=ERROR, R, stdout
 
 #stdout configure
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
